[tool.poetry]
name = "boost-ensembler"
version = "0.1.0"
description = ""
authors = ["Ryan Anderson <ryan@anderson.vc>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
torch = "^1.9.1"
scikit-learn = "^1.0"
jupyterlab = "^3.1.18"
matplotlib = "^3.4.3"
#shap = "^0.39.0"
#pyarrow = "^5.0.0"
tables = "^3.6.1"
#h5py = "^3.4.0"
#xgboost = {url = "https://s3-us-west-2.amazonaws.com/xgboost-nightly-builds/release_1.5.0/xgboost-1.5.0rc1%2B30c1b5c54c0ed54d420660e443e137b81f4fb712-py3-none-manylinux2014_x86_64.whl"}
hyperopt = "^0.2.5"
mlflow = "^1.20.2"
python-dotenv = "^0.19.1"
psycopg2-binary = "^2.9.1"
lightgbm = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
